// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should react to use effect call 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-theme-secondary-200 dark:bg-theme-dark-950"
    >
      <button
        aria-selected="true"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-1"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span>
          First
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Second
        </span>
      </button>
    </div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-theme-secondary-200 dark:bg-theme-dark-950"
    >
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          First
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Second
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Third
        </span>
      </button>
    </div>
    <div
      class="mt-5"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render wit counts 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-transparent"
    >
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          First
        </span>
        <span
          class="py-0.5 px-1.5 ml-2 text-sm font-semibold rounded bg-theme-primary-100 dark:bg-theme-secondary-900"
          data-testid="tabs__tab-button-1-count"
        >
          1
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Second
        </span>
        <span
          class="py-0.5 px-1.5 ml-2 text-sm font-semibold rounded bg-theme-primary-100 dark:bg-theme-secondary-900"
          data-testid="tabs__tab-button-2-count"
        >
          2
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Third
        </span>
        <span
          class="py-0.5 px-1.5 ml-2 text-sm font-semibold rounded bg-theme-primary-100 dark:bg-theme-secondary-900"
          data-testid="tabs__tab-button-3-count"
        >
          3
        </span>
      </button>
    </div>
    <div
      class="mt-5"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render with scroll 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="relative z-0"
      data-testid="TabScroll"
    >
      <div
        class="px-5 bg-theme-secondary-200 dark:bg-theme-dark-950"
      >
        <div
          class="[&::-webkit-scrollbar]:hidden overflow-x-auto relative z-0 mx-auto"
        >
          <div
            class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-transparent"
          >
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                First
              </span>
            </button>
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Second
              </span>
            </button>
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-3"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Third
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render with scroll in dark mode 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="relative z-0"
      data-testid="TabScroll"
    >
      <div
        class="px-5 bg-theme-secondary-200 dark:bg-theme-dark-950"
      >
        <div
          class="[&::-webkit-scrollbar]:hidden overflow-x-auto relative z-0 mx-auto"
        >
          <div
            class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-transparent"
          >
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                First
              </span>
            </button>
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Second
              </span>
            </button>
            <button
              aria-selected="false"
              class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
              data-ring-focus-margin="-mx-3"
              data-testid="tabs__tab-button-3"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Third
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render without background 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-transparent"
    >
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          First
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Second
        </span>
      </button>
      <button
        aria-selected="false"
        class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
        data-ring-focus-margin="-mx-3"
        data-testid="tabs__tab-button-3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span>
          Third
        </span>
      </button>
    </div>
    <div
      class="mt-5"
    />
  </div>
</DocumentFragment>
`;
